5.1.6 -> 5.1.7:
    - jbj: rpmku: create opaque keyutils keyring.
    - jbj: keyutils: permit configurable keyring.
    - jbj: rpmgc: display errors with gcry_strerror().
    - jbj: rpmnss: eliminate pubkey type wrapping methods.
    - jbj: rpmnss: fix: correct RSA/SHA512 cut-n-paste error.
    - jbj: rpmssl: don't bother with (unused) NID_foo.
    - jbj: name digests according to RFC 4880 section 9.4.
    - jbj: digest: add getters for digest name/algo/ANS1oid.
    - jbj: rpmssl: functional RSA verify --usecrypto ssl for signature(...) probe.
    - jbj: rpmgc: functional RSA verify --usecrypto gc for signature(...) probe.
    - jbj: rpmgc: bulldoze the RSA compost. still not working yet ...
    - jbj: rpmpgp: add ASN1 goop for SHA-224, add to bc/gc/nss/ssl.
    - jbj: rpmdigest: parse/verify 0install manifest format.
    - jbj: rpmdigest: resurrect rpmdigest -c manifest before attempting
	0install manifest verification.
    - jbj: rpmdigest: add sha256 (and other) digests to 0install manifests.
    - jbj: rpmdigest: achieve "sha1new" 0install manifest spewage for trees.
    - jbj: rpmdigest: generalize to do multi-rooted Fts(3) traversal.
    - jbj: rpmdigest: pull in mtreeCwalk() for 0install dir args tree spewage.
    - jbj: rpmdigest: achieve 0install manifest spewage for file args.
    - jbj: rpmdigest: refactor to prepare for 0install manifest spewage.
    - jbj: rpmrepo: avoid double'd error message.
    - jbj: rpmrepo: terminate immediately, rather than "best-effort" continue,
        on I/O error.
    - jbj: rpmrepo: terminate on short read, don't bother with extra EOF read.
    - jbj: move rpmns.[ch] to -lrpmdb for use with header format extensions.
    - jbj: move rpmevr.[ch] to -lrpmdb for use with header format extensions.
    - jbj: move rpmgrep and man page from rpmio/ to tools/ and install.
    - jbj: rpmfi: add storage and getters for exclude/include patterns.
    - jbj: perl: add a sentinel to rpmdsSingle() rather than exporting rpmdsDup().